--- a/_config/routes.yml
+++ b/_config/routes.yml
@@ -2,7 +2,7 @@
 Name: docs
 After: framework/routes#coreroutes
 ---
-Director:
+SilverStripe\Control\Director:
   rules:
     'dev/docs//$Action/$ID/$OtherID': 'DocumentationViewer'
     'DocumentationOpenSearchController//$Action': 'DocumentationOpenSearchController'
